# moonlight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dx12_questions.txt  moonlight_asset_file_spec.txt
src/: CMakeLists.txt  Resource.h  application.cpp  application.hpp  camera.cpp  camera.hpp  command_queue.cpp  command_queue.hpp  config.hpp  design_decisions.txt  dx12_resource.cpp  dx12_resource.hpp  dx12_wrapper.cpp  dx12_wrapper.hpp  framework.h  gameplay_system.cpp  gameplay_system.hpp  helpers.h  logger.hpp  logging_file.cpp  logging_file.hpp  moonlight.cpp  moonlight.hpp  mouse.cpp  mouse.hpp  profiler.cpp  profiler.hpp  project_defines.hpp  raster_model.cpp  raster_model.hpp  render_texture.cpp  render_texture.hpp  rendering_system.cpp  rendering_system.hpp  simple_math.hpp  swap_chain.cpp  swap_chain.hpp  targetver.h  winapi_reference.txt  window.cpp  (+2 more)
src/collision/: aabb.cpp  aabb.hpp  frustum.hpp  intersect.hpp  primitive_tests.hpp  ray.cpp  ray.hpp
src/core/: command_queue.cpp  command_queue.hpp  cpu_gpu_texture2d.cpp  cpu_gpu_texture2d.hpp  d3d12_common.hpp  d3d12_runtime_dxc.cpp  d3d12_runtime_dxc.hpp  d3d12_runtime_fxc.cpp  d3d12_runtime_fxc.hpp  descriptor_heap.cpp  descriptor_heap.hpp  dx12_resource.cpp  dx12_resource.hpp  global_pss_field.hpp  key_state.hpp  pso.cpp  pso.hpp  pss_desc.hpp  render_texture.cpp  render_texture.hpp  swap_chain.cpp  swap_chain.hpp  texture2D.cpp  texture2D.hpp  vertex_buffer_resource.cpp  vertex_buffer_resource.hpp
src/demos/: cube_application.cpp  cube_application.hpp
src/demos/00_cube_application/: cube_application.cpp  cube_application.hpp
src/demos/00_cube_application/shaders/: triangle_ps.cso  triangle_ps.hlsl  triangle_vs.cso  triangle_vs.hlsl
src/demos/01_frustum_culling/: README.md  frustum.hpp  frustum_culling.cpp  frustum_culling.hpp  plane.hpp
src/demos/01_frustum_culling/shaders/: fullquad_ps.cso  fullquad_ps.hlsl  fullquad_vs.hlsl  instanced_cube_ps.cso  instanced_cube_ps.hlsl  instanced_cube_vs.cso  instanced_cube_vs.hlsl
src/demos/02_environment_mapping/: README.md  environment_mapping.cpp  environment_mapping.hpp
src/demos/02_environment_mapping/shaders/: cubemap_ps.hlsl  cubemap_vs.hlsl  env_mapping_ps.hlsl  env_mapping_vs.hlsl  test_ps.hlsl  test_vs.hlsl
src/demos/03_global_illumination/: README.md  area_light.cpp  area_light.hpp  coordinate_system.cpp  coordinate_system.hpp  integrator.hpp  integrator_ao.hpp  integrator_normal.hpp  integrator_path.hpp  intersect.hpp  light.hpp  light_area.hpp  light_point.hpp  light_rectangular.hpp  material.hpp  material_lambertian.hpp  model.cpp  model.hpp  pdf.hpp  pdf_cosine.hpp  pdf_light.hpp  pdf_mixture.hpp  ray.cpp  ray.hpp  ray_camera.cpp  ray_camera.hpp  rtx_renderer.cpp  rtx_renderer.hpp  samplers.hpp  texture.hpp  texture_image.hpp  texture_single.hpp
src/demos/03_global_illumination/shaders/: bvh_intersect_cs_v00.hlsl  (+6 more)
src/demos/04_plotter/: passthrough.ps.hlsl  passthrough.vs.hlsl  plotter.cpp  plotter.hpp
src/demos/05_pbr/: pbr_demo.cpp  pbr_demo.hpp
src/demos/06_tetris/: README.md  input_buffer.hpp  specification.txt  tetris.cpp  tetris.hpp  tetris_app.cpp  tetris_app.hpp  tetris_block.cpp  tetris_block.hpp  tetris_playfield.cpp  tetris_playfield.hpp
src/demos/07_shadowmap/: shadow_map_demo.cpp  shadow_map_demo.hpp  shaodw_map_demo.cpp
src/demos/08_smoke_2d/: circular_buffer.hpp  quad_transform.hpp  smoke_2d.cpp  smoke_2d.hpp
src/demos/09_fluid/: fluid_simulation.cpp  fluid_simulation.hpp  mac_grid.cpp  mac_grid.hpp
src/demos/10_physics/: basic_simulation.cpp  basic_simulation.hpp
src/demos/11_graphs/: graph_application.cpp  graph_application.hpp
src/demos/basic_sphere/: basic_sphere.cpp  basic_sphere.hpp
src/demos/common/: scene.hpp  shader.hpp
src/demos/cube_application/: cube_application.cpp  cube_application.hpp
src/demos/mesh_shader/: mesh_shader_application.cpp  mesh_shader_application.hpp
src/demos/shaders/: cube_vs.hlsl
src/math/: aabb.cpp  aabb.hpp  frustum.hpp  plane.hpp  primitive_tests.hpp  ray.hpp
src/shaders/: cube_ps.hlsl  quad_shader.hlsl.ps  quad_shader.hlsl.vs
src/test/00_vs_performance/: vs_performance.cpp  vs_performance.hpp
src/utility/: arena_allocator.cpp  arena_allocator.hpp  bvh.cpp  bvh.hpp  common.cpp  common.hpp  file_browser.cpp  file_browser.hpp  glyph_renderer.cpp  glyph_renderer.hpp  random_number.cpp  random_number.hpp
(+47 files in other folders)
